[project]
name = "pdm-hitchhiker-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thomas Arambula III", email = "thomasarambula96@gmail.com"},
]
dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "loguru>=0.7.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
